[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "cairocffi>=1.7.1",
    "graphviz>=0.20.3",
    "importmagic>=0.1.7",
    "ipympl>=0.9.6",
    "ipywidgets>=8.1.5",
    "jupytext>=1.16.7",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "mnist1d>=0.0.2.post1",
    "nbgitpuller>=1.2.2",
    "nodejs>=0.1.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pkgconfig>=1.5.5",
    "psutil>=7.0.0",
    "pyparsing>=3.2.1",
    "pystan>=3.10.0",
    "python-crfsuite>=0.9.11",
    "python-mnist>=0.7",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "scipy>=1.15.2",
    "sortedcontainers>=2.4.0",
    "tabulate>=0.9.0",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchtext>=0.18.0",
    "torchvision>=0.21.0",
    "torchviz>=0.0.3",
]
